refactor(event): migrate EventMetadata from abstract class to interface with record implementation